--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,18 @@ spring.data.elasticsearch.cluster-name=mycluster
 spring.data.elasticsearch.cluster-nodes=localhost:9200
 
 #postgresql config
-spring.datasource.url=jdbc:postgresql://localhost:5432/logstas
-spring.datasource.username=postgres
-spring.datasource.password=pass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/logstas
+#spring.datasource.username=postgres
+#spring.datasource.password=pass
+#spring.jpa.show-sql=true
+
+
+spring.datasource.url= jdbc:sqlserver://akshay1760.database.windows.net:1433;database=StudentDemo;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username= akshay@akshay1760
+spring.datasource.password=pass@1760
 spring.jpa.show-sql=true
 
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
 
 spring.jpa.hibernate.ddl-auto= update
