--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.data.elasticsearch.cluster-nodes=localhost:9200
 #spring.jpa.show-sql=true
 
 
-spring.datasource.url= jdbc:sqlserver://akshay1760.database.windows.net:1433;database=StudentDemo;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username= akshay@akshay1760
-spring.datasource.password=pass@1760
+spring.datasource.url= jdbc:sqlserver://damsdbserver.database.windows.net:1433;database=DAMSDatabase;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username= damsdbserver@damsdbserver
+spring.datasource.password=pass@123
 spring.jpa.show-sql=true
 
 
