--- a/.github/workflows/main_damsbackend.yml
+++ b/.github/workflows/main_damsbackend.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - DAMSBackend
+name: Build and deploy JAR app to Azure Web App - DamsBackend
 
 on:
   push:
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'DAMSBackend'
+          app-name: 'DamsBackend'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_95C64C5CA4F744CD9771F572B305FEF6 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_91410DAD41F54E1C8E0FC12EB266682B }}
           package: '*.jar'
